[gd_scene load_steps=7 format=3 uid="uid://b43vunqwc74py"]

[ext_resource type="Script" uid="uid://7m5k2uxp5ovm" path="res://src/ui/play_screen.gd" id="1_52m3i"]
[ext_resource type="PackedScene" uid="uid://xbojp1nj4v2u" path="res://src/ui/elements/page_title.tscn" id="2_rohh1"]
[ext_resource type="Texture2D" uid="uid://bv6uex3waolmo" path="res://assets/backgrounds/hill_scenery_layers/sky.png" id="2_tic3p"]
[ext_resource type="PackedScene" uid="uid://kyvdstcxwup5" path="res://src/ui/elements/main_menu_label.tscn" id="3_b1kh3"]
[ext_resource type="PackedScene" uid="uid://celq8766hxbx8" path="res://src/ui/elements/main_menu_button.tscn" id="4_la0u8"]
[ext_resource type="PackedScene" uid="uid://3af0m2s4xitx" path="res://src/ui/elements/main_menu_text_edit.tscn" id="7_8vtke"]

[node name="PlayScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_52m3i")
host_screen = "res://src/ui/host_screen.tscn"
join_screen = "res://src/ui/join_screen.tscn"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tic3p")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100
alignment = 1

[node name="PageTitle" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_rohh1")]
layout_mode = 2
text = "[center]Play[/center]"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="MainMenuLabel" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("3_b1kh3")]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Enter Name:"

[node name="PlayerNameTextEdit" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("7_8vtke")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="HostButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_la0u8")]
layout_mode = 2
text = "Host"

[node name="JoinButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_la0u8")]
layout_mode = 2
text = "Join"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HSplitContainer/PlayerNameTextEdit" to="." method="_on_player_name_text_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
